--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       font-size:20px;
       margin:0 0 16px 0;
       font-style:italic;
-      color:#111;
+      color:#fff;
     }
     .small{
       color:var(--muted);
