--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     }
     .small{
       color:var(--muted);
-      font-size:13px;
+      font-size:56px;
       margin-top:8px;
     }
     .footer{
       margin-top:18px;
-      font-size:13px;
+      font-size:38px;
       color:var(--muted);
     }
   </style>
@@ -61,9 +61,9 @@
     <div class="box" role="dialog" aria-labelledby="warn">
       <div class="title" id="warn">⚠️ Warning: System Error</div>
       <div class="headline">Your site cannot be reached!</div>
-      <div class="quote">"You've been hacked"</div>
-      <div class="small">Unauthorized Access</div>
-      <div class="footer">Your account has been compromised</div>
+      <div class="quote">"You shouldn't be here"</div>
+      <div class="small">Japhet AGI</div>
+      <div class="footer">Joke Lang</div>
     </div>
   </div>
 </body>
